--- a/index.html
+++ b/index.html
@@ -30,6 +30,40 @@
             text-align: center;
             color: white;
         }
+        .content ul{
+            list-style-type: none;
+            padding: 50px;
+            display: flex;
+            justify-content: space-around
+            background-color:#39ff14;
+            color: #000;
+            width: 80%;
+            margin: 30px auto;
+            box-shadow: 0 0 10px #39ff14;
+        }
+        .content li{
+            padding:10px;
+            font-size: 20px;
+            color: #39ff14;
+            cursor: pointer;
+            transition:0.3s;
+
+            border-right: 0.8em solid #000;
+            white-space: nowrap;
+            overflow:hidden;
+            animation: type 3s steps(30,end), done .1s 3s forwards;
+        }
+        .content li:nth-child(2){
+            animation-delay: 3s,3s;
+        }
+
+        .content li:nth-child(3){
+            animation-delay:6s.6s;
+        }
+
+        @keyframes type {
+            to { border-right:none}
+        }
 
     </style>
 </head>
@@ -37,8 +71,12 @@
 <body>
     <canvas id="thematrix"></canvas>
     <div class="content">
-        <h1>Hi, my name is Siddhanth.
-        </h1>
+        <h1>Hi, my name is Siddhanth.</h1>
+        <ul>
+            <li onclick="location.href='aboutme.html'">About Me</li>
+            <li onclick="location.href='projects.html'">My Projects</li>
+            <li onclick="location.href='contact.html'">Contact</li>
+        </ul>
     </div>
     <script>
         const canvas = document.getElementById("thematrix")
